--- a/public/postulanteInfo.html
+++ b/public/postulanteInfo.html
@@ -61,6 +61,9 @@
             box-shadow: inset .2rem .2rem 1rem #4867f4,
                 -.2rem -.2rem 1rem #5271FF;
         }
+        .Inferior{
+            margin-top: 13vh;
+        }
     </style>
 </head>
 
@@ -70,7 +73,10 @@
 
         <button class="Atras">ATRAS</button>
     </header>
-    <h1>Hola Mundo xd</h1>
+    <div class="Inferior">
+        
+    </div>
+    
 </body>
 
 </html>
