--- a/public/postular/postulacion.html
+++ b/public/postular/postulacion.html
@@ -158,9 +158,9 @@
         <div class="franja_superior">
             <ul>
                 <li class="li2">
-                    <form action="/" method="get"><button class="regresar" type="submit"><img class="flechita"
-                                src="/postular/imgflecha"></button></form>
+                    <button onclick="regresar()" id="bregresar" class="regresar"></button></form>
                 </li>
+
                 <li class="li1">
                     <h1 class="titulo">Postulantes</h1>
                 </li>
@@ -209,5 +209,22 @@
             </div>
         </div>
     </div>
+    <script>
+        fetch("https://urban-xylophone-rvv5q5v9vp9c5q57-3000.preview.app.github.dev/flechaimg")
+            .then(response => response.url())
+            .then(data =>{
+                document.bregresar.innerHTML = "<img src='"+ data +"'>"
+            })
+        function regresar() {
+            fetch("https://urban-xylophone-rvv5q5v9vp9c5q57-3000.preview.app.github.dev/")
+                .then(response => response.text())
+                .then(data => {
+                    document.body.innerHTML = data
+                })
+       
+        }
+    </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5767291243908725"
+        crossorigin="anonymous"></script>
 </body>
 </html>
