Co-authored-by: BARRERA ESPINOZA MARCELO <mabarreraes@uide.edu.ec>

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5767291243908725"
+     crossorigin="anonymous"></script>
     <style>
         .franja_superior {
             margin: auto;
