--- a/public/postulanteInfo.html
+++ b/public/postulanteInfo.html
@@ -2,6 +2,8 @@
 
 <head>
     <title>Informacion Postulante</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5767291243908725"
+     crossorigin="anonymous"></script>
     <style>
         * {
             margin: 0;
