--- a/public/postular/postulacion.html
+++ b/public/postular/postulacion.html
@@ -2,6 +2,8 @@
 
 <head>
     <title>Ochurus Postulantes</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5767291243908725"
+     crossorigin="anonymous"></script>
     <style>
         @media screen and (min-device-width:1024px) and (max-device-width:1960px) and (min-device-height:569px) and (max-device-height:1080px) {
         @font-face {
