--- a/public/contratar.html
+++ b/public/contratar.html
@@ -4,6 +4,8 @@
     <title>
         Ochurus Contratantes
     </title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5767291243908725"
+     crossorigin="anonymous"></script>
     <style>
         * {
             margin: 0;
