--- a/public/contratar.html
+++ b/public/contratar.html
@@ -167,7 +167,9 @@
     <header>
         <!--boton que nos permetira regresar a la pagina principal
 -->
-        <button class="Atras">ATRAS</button>
+        <form action="/" method="get" >
+            <button class="Atras">ATRAS</button>
+        </form>
 
         <h1 class="logo">CONTRATAR</h1>
 
@@ -177,9 +179,6 @@
                     <ul>
                         <li>
                             <!--Insertado de ciudades para poder navegar en la base de datos-->
-                            <a href="#">Cuenca+</a>
-                            <a href="#">Quito+</a>
-                            <a href="#">Guayaquil+</a>
                         </li>
                     </ul>
                 </li>
@@ -199,14 +198,6 @@
                 <button class="Vermas">Ver Mas</button>
             </div>
         </div>
-        <div class="Postulante">
-            <div class="PostBox">
-                <h1 class="name">Nicolas Luna</h1>
-                <h1 class="carrera">Ingeniero en Sistemas</h1>
-            </div>
-            <div class="botonbox">
-                <button class="Vermas">Ver Mas</button>
-            </div>
         </div>
     </div>
 </body>
