Pending changes exported from your codespace

--- a/public/contratar.html
+++ b/public/contratar.html
@@ -161,6 +161,10 @@
             border-color: #790909;
         }
     </style>
+    <!--IMPORTANTE!!!!!! nico no te lo cargues-->
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, height=device-height initial-scale=1" />
 </head>
 
 <body>
