--- a/public/postular.html
+++ b/public/postular.html
@@ -190,7 +190,7 @@
                 </li>
 
                 <li class="li1">
-                    <h1 class="titulo">Postulantes</h1>
+                    <h1 class="titulo">Postulante</h1>
                 </li>
             </ul>
         </div>
