--- a/public/index.html
+++ b/public/index.html
@@ -364,7 +364,7 @@
                             Carrera de la que te graduaste y una breve descripcion de ti.
                         </h1>
                     </div>
-                    <form action="/postular" method="get">
+                    <form action="/postular" method="post">
                         <button type="submit" class="boton postular">Postular</button>
                     </form>
                 </div>
