--- a/public/contratar.html
+++ b/public/contratar.html
@@ -5,8 +5,18 @@
         Ochurus Contratantes
     </title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5767291243908725"
-     crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script>
     <style>
+        @font-face {
+            font-family: 'Monday Rain';
+            src: url('Monday_Rain/Monday-Rain.eot');
+            src: url('Monday_Rain/Monday-Rain.eot?#iefix') format('embedded-opentype'),
+                url('Monday_Rain/Monday-Rain.woff2') format('woff2'),
+                url('Monday_Rain/Monday-Rain.woff') format('woff'),
+                url('Monday_Rain/Monday-Rain.ttf') format('truetype'),
+                url('Monday_Rain/Monday-Rain.svg#Monday Rain') format('svg');
+        }
+
         * {
             margin: 0;
             padding: 0;
@@ -95,7 +105,7 @@
             cursor: pointer;
             transition: all 1s ease;
             box-shadow: .5rem .5rem 1rem #880808,
-                -.5rem -.5rem 1rem #790909;
+                -.5rem -.5rem 1rem #000000;
 
         }
 
@@ -171,7 +181,7 @@
     <header>
         <!--boton que nos permetira regresar a la pagina principal
 -->
-        <form action="/" method="get" >
+        <form action="/" method="get">
             <button class="Atras">ATRAS</button>
         </form>
 
@@ -202,7 +212,7 @@
                 <button class="Vermas">Ver Mas</button>
             </div>
         </div>
-        </div>
+    </div>
     </div>
 </body>
 
