--- a/public/postulanteInfo.html
+++ b/public/postulanteInfo.html
@@ -50,7 +50,7 @@
             cursor: pointer;
             transition: all 1s ease;
             box-shadow: .5rem .5rem 1rem #4867f4,
-                -.5rem -.5rem 1rem #5271FF;
+                -.5rem -.5rem 1rem #000000;
 
         }
 
