--- a/public/postulanteInfo.html
+++ b/public/postulanteInfo.html
@@ -78,7 +78,13 @@
     <div class="Inferior">
         
     </div>
-    
+    <script>
+        fetch("/comprobacion")
+        .then(response => response.text())
+        .then(data => {
+            console.log(data)
+        })
+    </script>
 </body>
 
 </html>
