--- a/public/contratar.html
+++ b/public/contratar.html
@@ -179,14 +179,11 @@
 
 <body>
     <header>
-        <!--boton que nos permetira regresar a la pagina principal
--->
+        <!--boton que nos permetira regresar a la pagina principal-->
         <form action="/" method="get">
             <button class="Atras">ATRAS</button>
         </form>
-
         <h1 class="logo">CONTRATAR</h1>
-
         <nav class="navciudad">
             <ul>
                 <li><a href="#">ciudades</a>
@@ -198,7 +195,6 @@
                 </li>
             </ul>
         </nav>
-
     </header>
     <div class="Inferior">
         <!--El div Postulante es el formato en el que se presentara a cada postulante
@@ -222,5 +218,4 @@
         })
     </script>
 </body>
-
 </html>
