--- a/public/index.html
+++ b/public/index.html
@@ -378,7 +378,7 @@
                             o tu empresa
                         </h1>
                     </div>
-                    <form action="/contratar" method="get">
+                    <form action="/contratar" method="post">
                         <button type="submit" class="boton contratar">Contratar</button>
                     </form>
                 </div>
