--- a/public/postular.html
+++ b/public/postular.html
@@ -19,30 +19,30 @@
                     url('Monday_Rain/Monday-Rain.svg#Monday Rain') format('svg');
             }
 
+
+
             * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: Arial, Helvetica, sans-serif;
-            text-transform: capitalize;
-            text-decoration: none;
-        }
+                margin: 0;
+                padding: 0;
+                box-sizing: border-box;
+                font-family: Arial, Helvetica, sans-serif;
+                text-transform: capitalize;
+                text-decoration: none;
+            }
 
             body {
                 min-height: 100vh;
             }
 
-            header {
-                position: fixed;
+            .franja_superior {
                 top: 0;
                 left: 0;
                 right: 0;
                 background: #1a4ed9;
                 box-shadow: 0 5px 10px rgba(0, 0, 0, .3);
-                padding: 0px 7%;
+                padding-right: 15%;
+                padding-left: -15%;
                 display: flex;
-                align-items: center;
-                justify-content: space-between;
             }
 
             .titulo {
@@ -50,18 +50,37 @@
                 font-size: 5vh;
             }
 
-            .regresar {
-                font-size: 8vh;
-                background: none;
+            .Atras {
+                background-color: transparent;
+                font-weight: bold;
+                font-family: Arial, Helvetica, sans-serif;
+                color: #fff;
+                font-size: 2vh;
+                padding: 1vh 2vw;
+                border: 2px solid rgb(10, 0, 180);
+                border-radius: 2vh;
+                cursor: pointer;
+                transition: all 1s ease;
+                box-shadow: .5rem .5rem 1rem rgb(3, 0, 54),
+                    -.5rem -.5rem 1rem #000000;
 
+            }
+
+            .Atras:hover {
+                box-shadow: .5rem .5rem 1rem rgb(3, 0, 54),
+                    -.5rem -.5rem 1rem rgb(3, 0, 54);
+            }
+
+            .Atras:active {
+                box-shadow: inset .2rem .2rem 1rem rgb(3, 0, 54),
+                    -.2rem -.2rem 1rem rgb(3, 0, 54);
             }
 
             .FranjaInferior {
                 align-items: center;
                 margin-top: 10vh;
-               
-            }
 
+            }
 
             li {
                 display: inline-block;
@@ -72,8 +91,6 @@
             .li1 {
                 padding-top: -10vh;
             }
-
-
 
             .Datos {
                 border: 0.7vh ridge black;
@@ -155,12 +172,12 @@
 
             .franja_superior {
                 margin: auto;
-                background: linear-gradient(90deg, rgba(10, 0, 180, 1) 0%, rgba(16, 9, 121, 1) 66%, rgba(188, 0, 255, 1) 100%);
+                background: linear-gradient(90deg, rgb(10, 0, 180) 0%, rgba(16, 9, 121, 1) 66%, rgba(188, 0, 255, 1) 100%);
                 display: flex;
+                flex-direction: row;
                 flex-wrap: wrap;
                 min-width: fit-content;
                 align-content: center;
-
             }
 
             .titulo {
@@ -169,11 +186,30 @@
 
             }
 
-            .regresar {
-                display: grid;
-                font-size: 8vh;
-                background: none;
+            .Atras {
+                background-color: transparent;
+                font-weight: bold;
+                font-family: Arial, Helvetica, sans-serif;
+                color: #fff;
+                font-size: 2vh;
+                padding: 1vh 2vw;
+                border: 2px solid rgb(10, 0, 180);
+                border-radius: 2vh;
+                cursor: pointer;
+                transition: all 1s ease;
+                box-shadow: .5rem .5rem 1rem rgb(3, 0, 54),
+                    -.5rem -.5rem 1rem #000000;
 
+            }
+
+            .Atras:hover {
+                box-shadow: .5rem .5rem 1rem rgb(3, 0, 54),
+                    -.5rem -.5rem 1rem rgb(3, 0, 54);
+            }
+
+            .Atras:active {
+                box-shadow: inset .2rem .2rem 1rem rgb(3, 0, 54),
+                    -.2rem -.2rem 1rem rgb(3, 0, 54);
             }
 
             li {
@@ -181,8 +217,6 @@
                 margin-top: 3vh;
                 margin-bottom: -7vh;
             }
-
-
 
             .FranjaInferior {
                 align-items: center;
@@ -194,7 +228,6 @@
                 border-bottom: 1px solid gray;
                 padding: 2vh 1vh;
             }
-
         }
     </style>
     <!--IMPORTANTE!!!!!! nico no te lo cargues-->
@@ -204,31 +237,14 @@
 </head>
 
 <body>
-
     <div class="contenedor">
         <!-- Crearemos la franja superior donde se leera Postulantes -->
-
-
-        <header>
             <div class="franja_superior">
-
-
                 <form action="/" method="get">
-                    <button type="submit" id="bregresar" class="regresar"> <img src="/Imagenes/flechita.webp">
-                    </button>
+                    <button class="Atras">ATRAS</button>
                 </form>
-
-
-
                 <h1 class="titulo">Postulantes</h1>
-
-
             </div>
-        </header>
-
-
-
-
         <div class="FranjaInferior">
             <!--Esta es la parte donde se mostrara en pantalla las entradas de datos
                     necesarias para la postulacion en el sitio web-->
@@ -274,10 +290,10 @@
     </div>
     <script>
         fetch("/comprobacion")
-        .then(response => response.text())
-        .then(data => {
-            console.log(data)
-        })
+            .then(response => response.text())
+            .then(data => {
+                console.log(data)
+            })
     </script>
 </body>
 
