--- a/public/postular.html
+++ b/public/postular.html
@@ -40,40 +40,44 @@
                 right: 0;
                 background: #1a4ed9;
                 box-shadow: 0 5px 10px rgba(0, 0, 0, .3);
-                padding-right: 15%;
-                padding-left: -15%;
+                padding: 0px 8%;
                 display: flex;
+                align-items: center;
+                justify-content: space-between;
+                
             }
 
             .titulo {
                 font-weight: bolder;
                 font-size: 5vh;
+                flex-grow: 1;
             }
 
             .Atras {
+                margin-right: 27vw;
                 background-color: transparent;
                 font-weight: bold;
                 font-family: Arial, Helvetica, sans-serif;
                 color: #fff;
                 font-size: 2vh;
                 padding: 1vh 2vw;
-                border: 2px solid rgb(10, 0, 180);
+                border: 2px solid #1a4ed9;
                 border-radius: 2vh;
                 cursor: pointer;
                 transition: all 1s ease;
-                box-shadow: .5rem .5rem 1rem rgb(3, 0, 54),
-                    -.5rem -.5rem 1rem #000000;
+                box-shadow: .5rem .5rem 1rem #1844bd,
+                    -.5rem -.5rem 1rem #1a4ed9;
 
             }
 
             .Atras:hover {
-                box-shadow: .5rem .5rem 1rem rgb(3, 0, 54),
-                    -.5rem -.5rem 1rem rgb(3, 0, 54);
+                box-shadow: .5rem .5rem 1rem #1a4ed9,
+                    -.5rem -.5rem 1rem #1844bd;
             }
 
             .Atras:active {
-                box-shadow: inset .2rem .2rem 1rem rgb(3, 0, 54),
-                    -.2rem -.2rem 1rem rgb(3, 0, 54);
+                box-shadow: inset .2rem .2rem 1rem #1844bd,
+                    -.2rem -.2rem 1rem #1a4ed9;
             }
 
             .FranjaInferior {
